Add vertx module and call it to verify that vertx 4 is all good with modules.

--- a/sample-core/build.gradle
+++ b/sample-core/build.gradle
@@ -2,4 +2,5 @@
 dependencies {
     api project(':gateway-api')
     implementation project(':sample-gateway')
+    implementation project(':http-gateway')
 }
