--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ allprojects {
                 testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
                 testImplementation 'org.assertj:assertj-core:3.18.0'
                 testImplementation 'org.mockito:mockito-inline:3.4.4'
+
+                implementation 'io.vertx:vertx-core:4.1.5'
+                implementation 'io.vertx:vertx-web-client:4.1.5'
+                testImplementation 'io.vertx:vertx-junit5:4.1.5'
             }
         }
     }
