--- a/sample-gateway/build.gradle
+++ b/sample-gateway/build.gradle
@@ -1,4 +1,7 @@
 
 dependencies {
     api project(':gateway-api')
+
+    implementation 'io.vertx:vertx-core:4.1.5'
+    implementation 'io.vertx:vertx-web-client:4.1.5'
 }
